--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@carbon/react": "^1.74.0",
     "cra-template": "1.2.0",
     "react": "^18.2.0",
+    "react-calendar": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
